--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
+    - text: Acessar Docs
       link: /guides/example/
       icon: right-arrow
       variant: primary
