--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Acessar Docs
-      link: /ponderada1/solution
+      link: /M10-Inteli-Eng-Comp_Gabriela_Matias/ponderada1/solution
       icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
